# LiquidHaskell

./: README.md
Papers/Allgemein/: PopPush2.hs
Papers/FibHeaps/: FibHeap_Haskell.html
lh-thesis/: README.md  lh-thesis.cabal  stack.yaml
lh-thesis/src/: Binomial.hs  Binomial_Log.hs  FibHeap.hs  Invariants.hs  MyBinomial.hs  PopPush.hs  PotentialAnalysis_Binomial.hs  PotentialAnalysis_Binomial2.hs  PotentialAnalysis_Binomial2_NV.hs  PotentialAnalysis_Binomial3.hs  PotentialAnalysis_FibHeap.hs  copy_Binomial.hs  fibheap.trs
lh-thesis/src/.liquid/: Binomial.hs.2.smt2  Binomial.hs.3.smt2  Binomial.hs.4.smt2  Binomial.hs.bak  Binomial.hs.cst.html  Binomial.hs.err  Binomial.hs.html  Binomial.hs.json  Binomial.hs.smt2  Binomial.hs.vim.annot  FibHeap.hs.bak  FibHeap.hs.cst.html  FibHeap.hs.err  FibHeap.hs.html  FibHeap.hs.json  FibHeap.hs.smt2  FibHeap.hs.vim.annot  Lib.hs.bak  Lib.hs.cst.html  Lib.hs.err  Lib.hs.html  Lib.hs.json  Lib.hs.smt2  Lib.hs.vim.annot  PopPush.hs.bak  PopPush.hs.cst.html  PopPush.hs.err  PopPush.hs.html  PopPush.hs.json  PopPush.hs.smt2  PopPush.hs.vim.annot
lh-thesis/write/: clm-template.tex
